2008-06-18  Olle Bergkvist <olle.bergkvist@yahoo.se>

	Merged from trunk:

	http://bugzilla.gnome.org/show_bug.cgi?id=419737#c59 - The file
	chooser clears the filename entry in SAVE/CREATE_FOLDER modes when
	it shouldn't.

	* gtk/gtkfilechooserdefault.c (shortcuts_activate_iter): Don't
	clear the entry for CREATE_FOLDER either; this needs the same
	behavior as SAVE mode.
	(update_chooser_entry): Only clear the entry in OPEN/SELECT_FOLDER
	modes.

2008-06-16  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	Bug 508751 – gnome-terminal crashed with SIGSEGV after keypress

	* gdk/x11/gdkkeys-x11.c (_gdk_keymap_key_is_modifier): Protect
	against XKB being stupid. Reported by Pedro
	Villavicencio.

2008-06-14  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

	* gdk/win32/gdkselection-win32.c (gdk_win32_selection_add_targets):

	Initialize hwnd to NULL.  This fixes OpenClipboard() failure and,
	according to MSDN docs, associates the open clipboard with the
	current task.  (#378158, reported by Andreas Köhler)

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	RH bug 248245 and 449379: cups client printing from gnome
	applications fail

	* modules/printbackends/cups/gtkprintbackendcups.c: Really fix
	printer URI construction. Patch by Marek Kasik

2008-06-08  Kristian Rietveld  <kris@imendio.com>

	Merge from trunk:

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_update_button):
	always determine what arrow to show if show_sort_indicator is true.
	(#352738, Chris Vine).

2008-06-07  Tor Lillqvist  <tml@novell.com>

	Bug 536990 - updateiconcache.c: 'close ()' is redundant

	* gtk/updateiconcache.c (build_cache): Drop redundant close()
	calls. fclose() on a fdopen()ed stream closes the underlying file
	descriptor.

2008-06-06  Matthias Clasen  <mclasen@redhat.com>

	Merge frum trunk:

	Bug 536757 – regression: openoffice.org menus are placed at wrong
	position since 2.12.10

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents):